# hungarian_algorithm_lib

./: CMakeLists.txt  LICENSE  license.txt  makefile  package.xml
src/: Hungarian.cpp  testMain.cpp
